# scene-fab

./: .editorconfig  .env.example  .flake8  .gitconfig  .gitignore  .lychee.toml  .lycheeignore  .markdownlint-cli2.jsonc  .mypy.ini  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.html  README.md  SPEC.md  conftest.py  cspell.json  main.py  main.spec  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-docs.yml  deploy-pages.yml  docs-external-links.yml  docs-format.yml  docs-links.yml  docs-lint.yml  docs-spellcheck.yml  pr-check.yml  release-build.yml
.superpowers/sdd/: progress.md  task-1-brief.md  task-1-report.md  task-10-brief.md  task-10-report.md  task-11-brief.md  task-11-report.md  task-12-brief.md  task-12-report.md  task-2-brief.md  task-2-report.md  task-3-brief.md  task-4-brief.md  task-4-report.md  task-5-brief.md  task-5-report.md  task-6-brief.md  task-6-report.md  task-7-brief.md  task-7-report.md  task-8-brief.md  task-8-report.md  task-9-brief.md  task-9-report.md
analysis/: optimization_report.md  performance_optimization.md
app/: __init__.py  main.py
app/api/: __init__.py  main.py
app/api/routers/: __init__.py  export.py  health.py  pipeline.py  plugins.py  projects.py
app/api/schemas/: models.py
app/cli/: __init__.py  main.py
app/core/: __init__.py  _signals.py  application.py  cache_manager.py  config_manager.py  icon_manager.py  logger.py  macos_theme_manager.py  project_manager.py  project_template_manager.py  secure_key_manager.py  service_container.py  settings_manager.py  template_models.py  version_manager.py
app/core/cache_impl/: disk_cache.py  (+1 more)
app/orchestration/: __init__.py  pipeline_controller.py
app/plugins/: __init__.py  loader.py  registry.py
app/services/: __init__.py  ai_service_manager.py  service_manager.py
app/ui/: macos_theme_manager.py
app/update/: __init__.py  checker.py
app/utils/: config.py  error_handler.py  performance.py  secure_config_loader.py  security.py  shortcut_manager.py
config/: app_config.yaml  llm.yaml  logging.conf
docs/: .markdownlint-cli2.jsonc  ARCHITECTURE_UPGRADE.md  ai-models.md  architecture.md  config.md  contributing.md  cspell.json  deprecations.md  faq.md  features.md  index.md  model-updates.md  package.json  security.md
docs/.vitepress/: config.ts
docs/adr/: 001-pyside6-vs-electron.md  002-local-processing-vs-cloud-rendering.md  003-event-driven-ioc-architecture.md  004-dag-parallel-pipeline.md  005-f5-tts-vs-cloud-tts.md  006-v21-architecture-upgrade.md  007-narration-state-machine.md  008-dead-code-cleanup.md  index.md
docs/guide/: ai-configuration.md  ai-video-guide.md  cli-reference.md  exporting.md  first-person-narration-production.md  installation.md  interface.md  narration-spec.md  python-api.md  quick-start.md  troubleshooting.md
examples/: README.md  cli-usage.sh  python-api.py  usage_example.py
examples/config/: app_config.yaml  llm.yaml
new_code/: Dockerfile  performance_utils.py
patches/: 001_emotion_peak_detector_improved.py  002_first_person_extractor_improved.py  003_ai_service_manager_improved.py  004_task_manager_improved.py
resources/: README.md  icon.icns
resources/styles/: dark_theme.qss  light_theme.qss
scripts/: build.py  build_linux.sh  build_macos.sh  build_windows.ps1  common.sh  docs-check-external-links.mjs  docs-check-format.mjs  docs-check-links.mjs  generate_badges.py  render-assets.py  resource_assets.py
src/core/: __main__.py  ai_services.py  cli.py  video.py
src/scenefab/: __init__.py  __main__.py  _signals.py  ai_services.py  application.py  cache_manager.py  cli.py  config_manager.py  engine.py  event_bus.py  exceptions.py  exporters.py  logger.py  main.py  models.py  pipeline.py  project_manager.py  project_template_manager.py  py.typed  registry_models.py  secure_key_manager.py  service_container.py  settings.py  settings_data.py  settings_manager.py  settings_types.py  signals_bridge.py  task_manager.py  template_models.py  version_manager.py  version_models.py  video.py
src/voxplore/: __main__.py  _signals.py  ai_services.py  application.py  cli.py  config_manager.py  engine.py  event_bus.py  exceptions.py  exporters.py  main.py  models.py  pipeline.py  project_manager.py  project_template_manager.py  secure_key_manager.py  settings.py  settings_manager.py  settings_types.py  task_manager.py  version_manager.py  version_models.py  video.py
tests/: __init__.py  conftest.py  test_ai_service_manager.py  test_api_routers_coverage.py  test_application.py  test_application_layer_exception_tightening.py  test_arch_v21.py  test_assembly_steps.py  test_assets_viewmodel.py  test_base_exporter.py  test_batch_export.py  test_batch_export_manager.py  test_beat_detector.py  test_benchmark.py  test_cache_manager.py  test_caption_generator.py  test_config_manager.py  test_core_v2.py  test_direct_video_exporter.py  test_error_handler.py  test_evaluation_steps.py  test_event_bus.py  test_event_handler.py  test_exceptions.py  test_export_presets.py  test_ffmpeg_tool.py  test_first_person_workflow.py  test_fp_workflow.py  test_frame_cache_disk_fallback.py  test_highlight_detector.py  test_home_viewmodel.py  test_http_client_mixin_narrowing.py  test_icon_manager.py  test_integration.py  test_issue82_regression.py  test_jianying_exporter.py  test_llm_base.py  test_llm_cache.py  test_llm_manager.py  test_llm_provider_exception_tightening.py  (+52 more)
tests/core/: test_service_container.py
tests/models/: test_project_models.py
tests/pipeline/: test_assembly_steps.py  test_evaluation_steps.py  test_understanding_steps.py
tests/test_core/: test__signals.py  test_service_container.py  test_signals_bridge.py
tests/test_plugins/: test_loader.py
tests/ui/: test_tray_manager.py
voxplore/: __init__.py  __main__.py  ai_services.py  cli.py  config.py  core.py  exporters.py  models.py  pipeline.py  task_manager.py  video.py  video_v2.py
(+808 files in other folders)
