[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scenefab"
version = "2.4.0"
description = "SceneFab - AI 影视解说视频创作工具，一键完成智能拆条 · 解说生成 · 配音合成"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Agions", email = "agions@qq.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Non-Linear Editor",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["video", "AI", "film-commentary", "scene-detection", "TTS", "短视频", "影视解说"]
dependencies = [
    # Core UI
    "PySide6>=6.9.0",
    "Shiboken6>=6.9.0",
    # Video/Audio Processing (core)
    "opencv-python>=4.8.1",
    "numpy>=1.26.0",
    "pillow>=10.1.0",
    "pydub>=0.25.0",
    "soundfile>=0.12.0",
    # Speech Synthesis (lightweight)
    "edge-tts>=6.1.0",
    # Scene Detection
    "scenedetect>=0.6.0",
    # Network
    "requests>=2.31.0",
    "httpx>=0.25.0",
    # Data validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    # Config
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    # System
    "psutil>=5.9.6",
    # Security
    "cryptography>=41.0.0",
    "keyring>=24.0.0",
    # LLM (lightweight clients)
    "openai>=1.0.0",
    "google-generativeai>=0.8.0",
    # Video Editing
    "moviepy>=1.0.3",
    # Packaging
    "packaging>=21.0",
]

[project.optional-dependencies]
# 重型 AI 依赖（~2GB+），按需安装
ai-full = [
    "faster-whisper>=1.0.0",  # 语音识别，依赖 torch
    "torch>=2.0.0",  # GPU 支持
    "librosa>=0.10.0",  # 音频分析
]
# 翻译功能
translation = [
    "deepl>=1.18.0",
]
# HTTP API 服务
api = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]
# 全部可选功能
all = [
    "scenefab[ai-full,translation,api]",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "black>=23.11.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.0",
    "types-PySide6>=6.6.0",
]

[project.scripts]
scenefab = "scenefab.main:main"

[project.urls]
Homepage = "https://github.com/Agions/scene-fab"
Documentation = "https://agions.github.io/scene-fab/"
Repository = "https://github.com/Agions/scene-fab.git"
Issues = "https://github.com/Agions/scene-fab/issues"
Changelog = "https://github.com/Agions/scene-fab/releases"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[tool.setuptools.package-data]
scenefab = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"
fix = false
show-fixes = false
output-format = "grouped"

[tool.ruff.lint]
select = ["E", "F", "N", "W", "B", "C4", "SIM", "I", "UP"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module-level import not at top of file (conditional imports)
    "E401",   # multiple imports on one line
    "N802",   # invalid function name (Qt conventions: paintEvent, etc.)
    "N806",   # variable in function should be lowercase (Qt class names: QApplication, etc.)
    "N812",   # imported as alias (Qt conventions)
    "N815",   # invalid class attribute (Qt signal conventions: valueChanged, etc.)
    "N817",   # CamelCase imported as acronym (Qt imports)
    "N999",   # invalid module name in test files
    "B904",   # raise from lack of exception context
    "B027",   # empty method body (abstract classes)
    "B024",   # abstract class without abstract method
    "W292",   # newline at end of file
    "W293",   # blank line contains whitespace (legacy files)
    "SIM102", # nested if statements (readability preference)
    "SIM103", # simplify condition (readability preference)
    "SIM105", # use contextlib.suppress (readability preference)
    "SIM108", # ternary operator (readability preference)
    "SIM110", # use else to remove assignment (readability preference)
    "SIM113", # use enumerate() for index variable
    "SIM117", # nested with statements (readability preference)
]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
# src 布局：让 `pytest` 无需 PYTHONPATH=src 或 editable install 即可导入 scenefab
pythonpath = ["src"]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
# 默认关闭 pytest-qt 插件：无 Qt binding 时它会 abort 整个 session。
# UI 测试通过根 conftest 在 PySide6 缺失时自动跳过；需要跑 UI 测试时用
# `pytest -p pytest-qt ...` 重新启用。
addopts = "-v --tb=short -p no:pytest-qt"
norecursedirs = ["tests/_legacy", ".venv", ".git", "dist", "build", "*.egg-info", "*_ascm_temp"]
markers = [
    "asyncio: 异步测试",
    "integration: 需要真实 API 密钥的集成测试",
    "slow: 运行较慢的测试",
    "unit: 单元测试",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_no_return = true
show_error_codes = true
pretty = true
warn_unreachable = true
strict_equality = true
files = ["src/scenefab", "tests"]

[[tool.mypy.overrides]]
module = "PySide6.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "psutil.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "opencv-python.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cv2.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[tool.uv]
# uv workspace members (for monorepo support in future)
# members = []
